...
            android:layout_marginTop="2dp" android:layout_marginStart="2dp" android:layout_marginLeft="2dp"
            android:scaleType="fitXY" android:background="@drawable/ic_colortab"
            app:layout_constraintStart_toStartOf="@+id/info_sun_elevation_current_label"
            app:layout_constraintTop_toBottomOf="@+id/info_sun_elevation_current"
            tools:ignore="ContentDescription" />    <!-- contentDescription is updated with the icon -->

        <View android:id="@+id/clickArea_altitude"
            android:background="?attr/selectableItemBackground"
            android:clickable="true" android:focusable="true"
            android:layout_width="0dp" android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/info_sun_elevation_current_label"
            app:layout_constraintEnd_toEndOf="@+id/info_sun_elevation_current"
            app:layout_constraintTop_toTopOf="parent"
...
        <View android:id="@+id/sundialog_gutter1" android:layout_width="0dp" android:layout_height="1dp"  app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/info_sun_azimuth_setting"
            app:layout_constraintTop_toTopOf="@+id/info_sun_azimuth_atnoon"
            app:layout_constraintEnd_toEndOf="parent" android:background="@color/transparent" android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/info_shadow_layout"
            android:background="?attr/selectableItemBackground"
            android:clickable="true" android:focusable="true"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:orientation="horizontal" android:gravity="center"
            android:layout_marginLeft="2dp" android:layout_marginStart="2dp"
            android:layout_marginTop="6dp"
...
                android:layout_marginRight="0dp" android:layout_marginEnd="0dp"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:gravity="center" tools:text="6 m" />

            <com.forrestguice.support.widget.ImageView
                android:id="@+id/info_shadow_icon"
                android:src="?attr/icActionShadow" android:contentDescription="@string/settings_general_observerheight"
                android:tint="?attr/text_accentColor"
                android:layout_width="24dp" android:layout_height="24dp" />

            <TextView style="@style/SunsetTimeTextView"
                android:id="@+id/info_shadow_length"
                android:layout_marginLeft="0dp" android:layout_marginStart="0dp"
...
            android:layout_marginRight="0dp" android:layout_marginEnd="0dp"
            app:layout_constraintStart_toEndOf="@+id/info_sun_azimuth_rising"
            app:layout_constraintEnd_toStartOf="@+id/info_sun_azimuth_setting"
            app:layout_constraintTop_toTopOf="@+id/info_shadow_layout"
            app:layout_constraintBottom_toBottomOf="@+id/info_shadow_layout" />

        <View android:id="@+id/clickArea_rising"
            android:background="?attr/selectableItemBackground"
            android:clickable="true" android:focusable="true"
            android:layout_width="0dp" android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/info_sun_azimuth_rising"
            app:layout_constraintEnd_toStartOf="@+id/clickArea_noon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View android:id="@+id/clickArea_noon"
            android:background="?attr/selectableItemBackground"
            android:clickable="true" android:focusable="true"
            android:layout_width="0dp" android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="@+id/info_sun_azimuth_atnoon"
            app:layout_constraintEnd_toEndOf="@+id/info_sun_azimuth_atnoon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <View android:id="@+id/clickArea_setting"
            android:background="?attr/selectableItemBackground"
            android:clickable="true" android:focusable="true"
            android:layout_width="0dp" android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/info_sun_azimuth_setting"
            app:layout_constraintStart_toEndOf="@+id/info_sun_azimuth_atnoon"
            app:layout_constraintTop_toTopOf="parent"
...
