...
<com.forrestguice.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/media_actions"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:orientation="horizontal" android:gravity="center_vertical"
    android:layout_marginTop="0dp" android:clickable="true"
     app:layout_constraintTop_toBottomOf="@+id/info_time_lightmap">

    <com.forrestguice.support.widget.ImageButton
        android:id="@+id/media_reset"
        android:layout_width="48dp" android:layout_height="48dp"
        android:background="?attr/selectableItemBackground" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        android:paddingTop="8dp" android:paddingBottom="8dp"
        android:paddingLeft="8dp" android:paddingStart="8dp"
        android:paddingRight="4dp" android:paddingEnd="4dp"
        android:contentDescription="@string/worldmap_dialog_action_reset"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="?attr/icActionTimeReset" />

    <com.forrestguice.support.widget.ImageButton
        android:id="@+id/media_play"
        android:layout_width="48dp" android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:paddingTop="8dp" android:paddingBottom="8dp"
        android:paddingLeft="4dp" android:paddingStart="4dp"
        android:paddingRight="8dp" android:paddingEnd="8dp"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/media_reset"
        android:contentDescription="@string/worldmap_dialog_action_play"
        android:src="?attr/icActionPlay" />

    <com.forrestguice.support.widget.ImageButton android:visibility="gone"
        android:id="@+id/media_pause"
        android:layout_width="48dp" android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="fitCenter"
        android:paddingTop="8dp" android:paddingBottom="8dp"
        android:paddingLeft="4dp" android:paddingStart="4dp"
        android:paddingRight="8dp" android:paddingEnd="8dp"
...
        android:background="?attr/selectableItemBackground"
        android:focusable="true" android:clickable="true"
        android:id="@+id/media_speed" android:textStyle="bold"
        android:layout_width="wrap_content" android:minWidth="50dp" android:maxWidth="60dp"
        android:layout_height="0dp" android:layout_margin="0dp"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/media_menu"
        tools:text="@string/worldmap_dialog_speed_5m" android:gravity="center" />

    <com.forrestguice.support.widget.ImageButton
        android:id="@+id/media_menu"
        android:layout_width="0dp" android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
...
