...
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesWidget.  If not, see <http://www.gnu.org/licenses/>.
-->
<com.forrestguice.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_lightmap_layout"
    android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="125dp"
    android:orientation="vertical" android:gravity="start"
    android:background="?dialogBackground">

    <View style="?attr/sheetEdgeWeak" />

    <TextView android:id="@+id/sundialog_title" style="@style/DialogTitleStyle"
        android:text="@string/lightmap_dialog_title"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="@dimen/dialog_margin" android:layout_marginRight="@dimen/dialog_margin" android:layout_marginTop="@dimen/dialog_margin"
        android:layout_width="wrap_content" android:layout_height="wrap_content" />

    <TextView android:id="@+id/info_time_solar" style="@style/SunsetTimeTextView"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        tools:text="June 3, 6:00 PM Apparent Solar Time" android:gravity="end|right"
        android:singleLine="true" android:ellipsize="marquee"
        android:background="?attr/selectableItemBackground"
        android:focusable="true" android:clickable="true"
        android:layout_marginLeft="@dimen/dialog_margin" android:layout_marginRight="@dimen/dialog_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sundialog_title" />

    <com.forrestguice.support.widget.ImageButton android:id="@+id/lightgraph_button"
        android:layout_width="48dp" android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|end"
        android:src="?attr/icActionSunChart"
        style="?attr/actionOverflowButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
