...
        android:text="@string/lightmap_seekAltitude_suffix" />

    <Button
        android:id="@+id/button_rising"
        android:layout_width="48dp" android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/lightmap_seekAltitude_rising" android:textColor="?attr/text_accentColor"
        android:contentDescription="@string/lightmap_seekAltitude_rising_contentDescription" />

    <Button
        android:id="@+id/button_setting"
        android:layout_width="48dp" android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
...
        android:contentDescription="@string/lightmap_seekAltitude_setting_contentDescription" />

    <TextView android:id="@+id/text_title"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginStart="16dp" android:layout_marginLeft="16dp"
        android:textSize="?attr/text_size_small" android:textStyle="bold"
        android:text="@string/action_seekAltitude" />

    <com.forrestguice.support.widget.ImageButton
        android:id="@+id/button_menu"
        style="?attr/actionOverflowButtonStyle"
        android:layout_width="48dp" android:layout_height="48dp"
        android:contentDescription="@string/action_overflow" android:textColor="?attr/text_accentColor" />
...
